wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/Potential_revenue_for_the_year__c.object-meta.xml
<CustomObject>
    <label>Potential revenue for the year</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Potential revenue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential revenue for the year</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>