wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Potential revenue for the year</relationshipLabel>
    <relationshipName>Potential_revenue_for_the_year</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>