wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/fields/Field_Service__c.field-meta.xml
<CustomField>
    <fullName>Field_Service__c</fullName>
    <label>Field Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>