wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/fields/Rental__c.field-meta.xml
<CustomField>
    <fullName>Rental__c</fullName>
    <label>Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>