wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/fields/Rotating_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Rotating_Equipment__c</fullName>
    <label>Rotating Equipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>