wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/fields/Trading__c.field-meta.xml
<CustomField>
    <fullName>Trading__c</fullName>
    <label>Trading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>