wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/fields/Valves__c.field-meta.xml
<CustomField>
    <fullName>Valves__c</fullName>
    <label>Valves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>