wier/force-app/main/default/objects/Potential_revenue_for_the_year__c/fields/Workshop__c.field-meta.xml
<CustomField>
    <fullName>Workshop__c</fullName>
    <label>Workshop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>